Fix blurry modal on some screen heights

--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -29,7 +29,7 @@
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
     left: 50%;
-    position: fixed;
+    position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     transition: all 0.3s ease;
